# blackmaple-software

./: .gitignore  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  index.html  index.scss  nixpacks.toml  trunk.toml
src/: app.rs  main.rs  routes.rs
src/components/: footer.rs  mod.rs  pjpermit.rs  pjpermit.text  splash_logo.rs
