[package]
name = "blackmaple_software"
version = "0.2.0"
edition = "2024"
description = "blackmaple software main site + tools"
readme = "README.md"
repository = "https://github.com/zachbrown-bm/blackmaple.git"
categories = ["gui", "wasm", "web-programming", "rust", "software development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.23", features = ["csr"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
tracing-web = "0.1"
yew-router = "0.20.0"
