[package]
name = "blackmaple_software"
version = "0.2.0"
edition = "2024"
description = "blackmaple software main site + tools"
readme = "README.md"
repository = "https://github.com/zachbrown-bm/blackmaple.git"
categories = ["gui", "wasm", "web-programming", "rust", "software development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.23.0", features = ["csr"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["fmt"] }
tracing-web = "0.1.3"
yew-router = "0.20.0"
web-sys = "0.3.98"
gloo-net = "0.7.0"
wasm-bindgen-futures = "0.4.76"
